<resources>
    <string name="app_name">Autores</string>
    <string name="instructions">Ingrese el título o parte del título de un libro para ver sus datos.</string>
    <string name="inputHint">Título del Libro</string>
    <string name="searchBook">Buscar Libro</string>
    <string name="title">Titulo</string>
    <string name="author">"Autor(es): "</string>
    <string name="publisher">"Editorial: "</string>
    <string name="price">S/</string>
    <string name="publishedDate">"Publicado: "</string>
    <string name="more">Ver más</string>
    <string name="titleListBooks">Lista de Libros</string>
    <string name="onlyPurchase">Solo disponibles para comprar</string>
    <string name="mainTitle">Buscador de Libros</string>
    <string name="allBooks">Mostrar todos los libros disponibles.</string>
    <string name="quantityBooks">"Mostrar como máximo "</string>
    <string name="books">" libros"</string>
    <string name="book">" libro"</string>
    <string name="language">Idioma</string>
    <string name="errorBookName">Ingrese un título para buscar</string>
    <string name="seeInfo">Ver más Info</string>
    <string name="notForSale">No disponible para la venta</string>
    <string name="anyResult">No existen resultados</string>
    <string name="withoutDescription">Sin descripción</string>
    <string-array name="languages">
        <item>Cualquiera</item>
        <item>Español</item>
        <item>Ingles</item>
    </string-array>
</resources>